--- a/style.css
+++ b/style.css
@@ -55,13 +55,30 @@
     border-radius: 50%;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    opacity: 0;
+    pointer-events: none;
+    transition: .3s;
+}
+
+#left:hover,
+#right:hover {
+    background-color: #fff;
+    color: #000;
 }
 
 #left {
     left: 1%;
+    transform: translate(-100%, -50%);
 }
 
 #right {
     right: 1%;
+    transform: translate(100%, -50%);
+}
+
+.slider:hover #left,
+.slider:hover #right {
+    opacity: 1;
+    pointer-events: all;
+    transform: translate(0, -50%);
 }
